# Snake

./: CMakeLists.txt  README.md
include/: Config.hpp  Game.hpp
include/Events/: EventHandler.hpp
include/Log/: LogSystem.hpp
include/Render/: CellRenderer.hpp  Renderer.hpp  SnakeRenderer.hpp
include/Types/: Cell.hpp  Snake.hpp  SnakeBase.hpp
src/: Game.cpp  main.cpp
src/Events/: EventHandler.cpp
src/Render/: CellRenderer.cpp  Renderer.cpp  SnakeRenderer.cpp
src/Types/: Snake.cpp
